# Guise

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
examples/: example1.cpp
include/guise/: appWindow.hpp  build.hpp  canvas.hpp  context.hpp  context.inl  control.hpp  defaultStyles.hpp  font.hpp  input.hpp  lib_template.hpp  plane.hpp  platform.hpp  renderer.hpp  signal.hpp  signal.inl  style.hpp  style.inl
include/guise/appWindow/linux/: linuxAppWindow.hpp
include/guise/appWindow/win32/: win32AppWindow.hpp
include/guise/control/: button.hpp  checkbox.hpp  dockable.hpp  dockable.inl  dpiSensitive.hpp  horizontalGrid.hpp  label.hpp  movable.hpp  movable.inl  plane.hpp  tabWindow.hpp  textBox.hpp  verticalGrid.hpp  window.hpp
include/guise/math/: bounds.hpp  bounds.inl  matrix.hpp  matrix.inl  vector.hpp  vector.inl
include/guise/platform/: win32Headers.hpp
include/guise/renderer/: texture.hpp  vertexArray.hpp  vertexBuffer.hpp
include/guise/renderer/opengl/: glext.h  opengl.hpp  openglRenderer.hpp  openglTexture.hpp
include/guise/utility/: controlGrid.hpp  semaphore.hpp  semaphore.inl
source/guise/: appWindow.cpp  canvas.cpp  context.cpp  control.cpp  font.cpp  input.cpp  lib_template.cpp  plane.cpp  platform.cpp  renderer.cpp  style.cpp
source/guise/appWindow/linux/: linuxAppWindow.cpp
source/guise/appWindow/win32/: win32AppWindow.cpp
source/guise/control/: button.cpp  checkbox.cpp  dpiSensitive.cpp  horizontalGrid.cpp  label.cpp  plane.cpp  tabWindow.cpp  textBox.cpp  verticalGrid.cpp  window.cpp
source/guise/renderer/: texture.cpp  vertexArray.cpp  vertexBuffer.cpp
source/guise/renderer/opengl/: opengl.cpp  openglRenderer.cpp  openglTexture.cpp
source/guise/utility/: controlGrid.cpp
tests/: button_test.hpp  docking_test.hpp  math_test.hpp  test.hpp  test_template.hpp  tests.cpp  window_test.hpp
